# AChave

./: LICENSE  README.md  docker-compose.yml  start.sh
backend/: .env.example  .gitignore  Dockerfile  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  reset_db.py
backend/crud/: password.py  user.py  vault.py
backend/models/: __init__.py  password.py  user.py  vault.py
backend/routers/: auth.py  password.py  vaults.py
backend/schemas/: password.py  user.py  vault.py
backend/utils/: email.py  hash_check.py  oauth.py  security.py
extension/: index.html  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: background.js  content.js
extension/src/: App.tsx  index.css  main.tsx
extension/src/components/layout/: DashboardLayout.tsx  ExtensionHeader.tsx  ExtensionNav.tsx  ThemeToggle.tsx
extension/src/components/modals/: CreateVaultModal.tsx  DeleteVaultModal.tsx
extension/src/context/: CryptoContext.tsx  ThemeContext.tsx
extension/src/hooks/: usePwnedPassword.ts  usePwnedPasswordBatch.ts
extension/src/lib/: api.ts  storage.ts
extension/src/pages/: AjustesPage.tsx  ClavesPage.tsx  GeneradorPage.tsx  LoginPage.tsx  VerifyPage.tsx
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/context/: CryptoContext.tsx  ThemeContext.tsx
frontend/src/hooks/: usePasswordGenerator.ts  usePwnedPassword.ts  usePwnedPasswordBatch.ts
frontend/src/lib/: api.ts
(+14 files in other folders)
